# 3d-print-instructions

./: .gitignore  README.md  pyproject.toml
docs/: _config.yml  index.md
docs/Sterling Engine Instructions/: instructions copy.md  instructions.md
docs/_layouts/: clean.html
instructions_writer/: __init__.py  gemini.py  main.py
